AUGREL/src/objects/SfClosedAccount__x.object
<CustomObject>
    <description>SfClosedAccount</description>
    <externalDataSource>ODataService</externalDataSource>
    <externalName>SfClosedAccount</externalName>
    <fields>
        <fullName>accountClosedDate__c</fullName>
        <description>accountClosedDate</description>
        <externalDeveloperName>accountClosedDate</externalDeveloperName>
        <label>accountClosedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>accountType__c</fullName>
        <description>accountType</description>
        <externalDeveloperName>accountType</externalDeveloperName>
        <label>accountType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>branch__c</fullName>
        <description>branch</description>
        <externalDeveloperName>branch</externalDeveloperName>
        <label>branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>businessName__c</fullName>
        <description>businessName</description>
        <externalDeveloperName>businessName</externalDeveloperName>
        <label>businessName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financialAccountNumber__c</fullName>
        <description>financialAccountNumber</description>
        <externalDeveloperName>financialAccountNumber</externalDeveloperName>
        <label>financialAccountNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financialAccountStatus__c</fullName>
        <description>financialAccountStatus</description>
        <externalDeveloperName>financialAccountStatus</externalDeveloperName>
        <label>financialAccountStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <description>firstName</description>
        <externalDeveloperName>firstName</externalDeveloperName>
        <label>firstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last8VinNumber__c</fullName>
        <description>last8VinNumber</description>
        <externalDeveloperName>last8VinNumber</externalDeveloperName>
        <label>last8VinNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <description>lastName</description>
        <externalDeveloperName>lastName</externalDeveloperName>
        <label>lastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>make__c</fullName>
        <description>make</description>
        <externalDeveloperName>make</externalDeveloperName>
        <label>make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modelName__c</fullName>
        <description>modelName</description>
        <externalDeveloperName>modelName</externalDeveloperName>
        <label>modelName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modelYear__c</fullName>
        <description>modelYear</description>
        <externalDeveloperName>modelYear</externalDeveloperName>
        <label>modelYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssn__c</fullName>
        <description>ssn</description>
        <externalDeveloperName>ssn</externalDeveloperName>
        <label>ssn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tin__c</fullName>
        <description>tin</description>
        <externalDeveloperName>tin</externalDeveloperName>
        <label>tin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ucId__c</fullName>
        <description>ucId</description>
        <externalDeveloperName>ucId</externalDeveloperName>
        <label>ucId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicleIdentificationNumber__c</fullName>
        <description>vehicleIdentificationNumber</description>
        <externalDeveloperName>vehicleIdentificationNumber</externalDeveloperName>
        <label>vehicleIdentificationNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zipcode__c</fullName>
        <description>zipcode</description>
        <externalDeveloperName>zipcode</externalDeveloperName>
        <label>zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SfClosedAccount</label>
    <pluralLabel>SfClosedAccount</pluralLabel>
</CustomObject>